# Ferrite

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt  Config.cppm  Core.cppm  Manager.cppm
Engine/Core/Classes/: Classes.cppm  Component.cppm  Object.cpp  Object.cppm  PrefabManager.cppm  Prefabs.cppm
Engine/Core/Debug/: Debug.cppm
Engine/Core/Events/: Events.cppm
Engine/Core/Exceptions/: CircularStructure.cppm  Exceptions.cppm  NoComponentFound.cppm  NoFileFound.cppm  NoObjectFound.cppm
Engine/Core/Initialization/: ConstexprTypes.cppm  Initialization.cppm  YAML.cppm  YAMLToPrefab.cppm
Engine/Core/Jobs/: Jobs.cppm  Queue.cppm  Worker.cppm
Engine/Core/Threads/: ThreadObject.cppm  Threads.cppm
Engine/Core/Time/: Time.cppm  TimeVariables.cppm  Timer.cppm
Engine/Math/: CMakeLists.txt  Math.cppm
Engine/Math/Vector/: Vector.cppm  Vector2.cppm  Vector3.cppm
Engine/Rendering/: CMakeLists.txt  Config.cppm  Init.cppm  Rendering.cppm
Engine/Rendering/Base/: RenderAPI.cppm
Engine/Rendering/Vulkan/: Init.cppm  Vulkan.cppm
Engine/Rendering/Window/: GLFW.cppm  WindowUpdate.cppm
